--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@nextui-org/react": "^1.0.0-beta.12",
+    "node-fetch": "^2.6.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0"
