--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-fetch": "^2.6.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
