--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
-    "@nextui-org/react": "1.0.0-beta.12",
+    "@nextui-org/react": "^2.0.19",
     "@vercel/analytics": "^1.0.0",
     "@vercel/kv": "^0.2.2",
     "@vercel/og": "^0.5.7",
     "ai": "^2.1.6",
     "ai-jsx": "^0.5.11",
+    "framer-motion": "^10.15.1",
     "next": "13.4.7",
     "next-auth": "0.0.0-manual.83c4ebd1",
     "next-themes": "^0.2.1",
@@ -41,12 +42,15 @@
     "@types/react-syntax-highlighter": "^15.5.6",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.38.0",
     "eslint-config-next": "13.4.7-canary.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.27",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.3"
   }
 }
