--- a/package.json
+++ b/package.json
@@ -3,16 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
-  "packageManager": "yarn@3.6.0",
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
-    "dev": "yarn workspace webapp dev",
-    "build": "yarn workspace webapp build",
-    "format": "yarn workspace webapp format",
-    "check": "yarn workspace webapp check",
-    "lint": "yarn workspace webapp lint"
+    "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
     "@types/prettier": "^2",
@@ -25,8 +17,7 @@
     "typescript": "^5.1.3"
   },
   "volta": {
-    "node": "18.16.0",
-    "yarn": "3.6.0"
+    "node": "18.16.0"
   },
   "prettier": {
     "printWidth": 120,
