--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -2,7 +2,6 @@
   "name": "webapp",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,13 +16,24 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
-    "@nextui-org/react": "^2.0.19",
+    "@nextui-org/avatar": "^2.0.11",
+    "@nextui-org/button": "^2.0.11",
+    "@nextui-org/card": "^2.0.11",
+    "@nextui-org/image": "^2.0.11",
+    "@nextui-org/input": "^2.0.13",
+    "@nextui-org/link": "^2.0.11",
+    "@nextui-org/modal": "^2.0.12",
+    "@nextui-org/navbar": "^2.0.11",
+    "@nextui-org/progress": "^2.0.11",
+    "@nextui-org/spacer": "^2.0.9",
+    "@nextui-org/system": "^2.0.5",
+    "@nextui-org/theme": "^2.0.5",
     "@vercel/analytics": "^1.0.0",
     "@vercel/kv": "^0.2.2",
     "@vercel/og": "^0.5.7",
     "ai": "^2.1.6",
     "ai-jsx": "^0.5.11",
-    "framer-motion": "^10.15.1",
+    "framer-motion": "^10.15.2",
     "next": "13.4.7",
     "next-auth": "0.0.0-manual.83c4ebd1",
     "next-themes": "^0.2.1",
@@ -36,6 +46,7 @@
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -48,9 +59,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.27",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.3.3",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss": "^3.3.1",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "^5.1.3"
   }
 }
